--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Rawaz Ali</title>
 </head>
+
 <body>
-    
-    <script src="script.js"></script>
+
+  <div id="mySidenav" class="sidenav">
+    <!-- sidebar close button -->
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <!-- profile card -->
+    <div class="profile">
+
+      <img src="images/photo_2022-06-22_16-45-07.jpg" class="rounded-4 img-fluid hover-shadow" alt="Avatar" />
+
+      <h5 class="mb-2"><strong>Rawaz Ali</strong></h5>
+      <p class="text-muted">Front-end Web Developer</p>
+
+    </div>
+    <!-- links  -->
+    <div>
+      <a href="#">About</a>
+      <a href="#">Projects</a>
+      <a href="#">Skills</a>
+      <a href="#">Contact</a>
+    </div>
+  </div>
+  <!-- sidebar open button -->
+  <div id="main">
+    <span id="open" style="font-size: 20px; cursor: pointer" onclick="openNav()">&#9776; open</span>
+  </div>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
