changing some design, adding navbar for a media query

--- a/index.html
+++ b/index.html
@@ -13,32 +13,95 @@
 </head>
 
 <body>
+  <!-- mobile and ipad navbar  -->
 
-  <div id="mySidenav" class="sidenav">
+  <nav class="nav justify-content-sm-center">
+    <li class="nav-item">
+      <a class="nav-link link-light" href="#">About</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-light" href="#">Projects</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-light" href="#">Skills</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-light" href="#">Contacts</a>
+    </li>
+  </nav>
+
+
+  <aside id="mySidenav" class="sidenav">
     <!-- sidebar close button -->
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeSideNav()">&times;</a>
     <!-- profile card -->
     <div class="profile">
 
       <img src="images/photo_2022-06-22_16-45-07.jpg" class="rounded-4 img-fluid hover-shadow" alt="Avatar" />
 
       <h5 class="mb-2"><strong>Rawaz Ali</strong></h5>
-      <p class="text-muted">Front-end Web Developer</p>
+      <p style="color: #f1f1f1;">Front-end Web Developer</p>
 
     </div>
-    <!-- links  -->
+    <!-- profile card end  -->
+
+    <!-- sidebar links  -->
     <div>
       <a href="#">About</a>
       <a href="#">Projects</a>
       <a href="#">Skills</a>
       <a href="#">Contact</a>
     </div>
-  </div>
-  <!-- sidebar open button -->
-  <div id="main">
-    <span id="open" style="font-size: 20px; cursor: pointer" onclick="openNav()">&#9776; open</span>
-  </div>
+  </aside>
 
+
+
+  <main id="content" class="content">
+
+    <!-- sidebar open button -->
+    <span id="open" class="open" style="font-size: 20px; cursor: pointer" onclick="openSideNav()">&#9776; open</span>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum cum voluptatem nihil dolorem provident aperiam
+      omnis quis ut distinctio voluptatum quod unde rem doloremque enim nesciunt, magni officia velit perferendis.</p>
+
+
+  </main>
   <script src="script.js"></script>
 </body>
 
