--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
       <div class="mx-auto fs-4 ">Rawaz Ali</div>
     </div>
     <!-- about section start -->
+
+   
+
     <section id="about">
-      <div class="container w-auto mx-lg-auto m-1 my-5 p-3 d-flex align-items-center justify-content-between">
+      <div class="container w-auto mx-lg-auto m-1 my-5 p-3 d-flex align-items-center justify-content-center">
         <div
           class="row p-2 pb-0 pe-lg-0 pt-lg-5 align-items-center justify-content-between rounded-4  shadow-lg w-auto">
           <div class="col-lg-7 p-lg-5 pt-lg-3 ">
@@ -99,11 +102,11 @@
 
     <!-- skill section start -->
     <section id="skills">
-      <div class="container w-100 mx-lg-auto m-1 p-3 my-5 mt-lg-1 ">
+      <div class="container w-auto mx-lg-auto m-1 p-3 my-5 mt-lg-1 ">
 
         <div class="skill-bars">
           <div class="fw-bold fs-2 darkGreen text-center">
-            Skills
+            <i class="bi bi-code"></i> Skills
             <hr>
           </div>
 
@@ -192,9 +195,10 @@
           class="row p-2 pt-0 pe-lg-3 pt-lg-3 align-items-center justify-content-between rounded-4  shadow-lg w-auto">
 
           <div class="fw-bold fs-2 darkGreen text-center mb-2">
-            Projects
+            <i class="bi bi-file-earmark-code"></i> Projects
           </div>
           <hr>
+          <!-- resizer project -->
           <div class="row mb-2">
             <div class="col-md-6">
               <div class="card flex-md-row mb-4 box-shadow h-md-250 rounded-3">
@@ -212,21 +216,21 @@
                   style="width: 205px; height: 250px;" src="images/Screenshot (65).png" data-holder-rendered="true">
               </div>
             </div>
+            <!-- color generator project -->
             <div class="col-md-6">
               <div class="card flex-md-row mb-4 box-shadow h-md-250">
                 <div class="card-body d-flex flex-column align-items-start">
                   <strong class="d-inline-block mb-2 text-success">Design</strong>
                   <h3 class="mb-0">
-                    <a class="text-dark" href="#">Post title</a>
+                    Random Color Generator
                   </h3>
-                  <div class="mb-1 text-muted">Nov 11</div>
-                  <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                    additional content.</p>
-                  <a href="#">Continue reading</a>
+                  <div class="mb-1 text-muted">June 28 2022</div>
+                  <p class="card-text mb-auto">Generating random color of Hex numbers.</p>
+                  <a href="random-color/index.html" class="btn btn-success">See Project</a>
                 </div>
                 <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb"
                   alt="Thumbnail [200x250]" style="width: 200px; height: 250px;"
-                  src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1819ccc6495%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1819ccc6495%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2256.1953125%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                  src="images/colors.jpeg"
                   data-holder-rendered="true">
               </div>
             </div>
@@ -241,21 +245,22 @@
 
     <!-- contact section starts  -->
     <section id="contact">
-      <div class="container w-75 mx-lg-auto my-5  p-3 d-flex align-items-center justify-content-around">
+      <div class="container w-auto mx-lg-auto my-5  p-3 d-flex align-items-center justify-content-around">
 
         <div
-          class="row p-2 pt-0 pe-lg-3 pt-lg-3 align-items-center justify-content-between rounded-4  shadow-lg w-auto">
+          class="row p-2 pt-0 pe-lg-3 pt-lg-3  justify-content-center rounded-4  shadow-lg w-auto">
 
     
 
 
           <!--Section heading-->
-          <h2 class="h1-responsive font-weight-bold text-center my-4">Contact Me</h2>
+          <h2 class="h1-responsive font-weight-bold text-center my-3"><i class="bi bi-envelope"></i> Contact Me</h2>
+          <hr>
           <!--Section description-->
           <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact
             me directly. I will be happy to help you. </p>
 
-          <div class="row">
+          <div class="row justify-content-center">
 
             <!--Grid column-->
             <div class="col-md-9 mb-md-0 mb-5">
