--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <main id="content" class="content">
 
     <div id="header" class="text-white shadow-sm p-2 mb-5 d-flex fixed-top">
-      <span id="open" class="align-items-start fs-4" style=" cursor: pointer ;" onclick="openSideNav()">&#9776;</span>
+      <span id="open" class="align-items-start fs-4"  onclick="openSideNav()">&#9776;</span>
       <div class="mx-auto fs-4 ">Rawaz Ali</div>
     </div>
     <!-- about section start -->
@@ -58,9 +58,8 @@
    
 
     <section id="about">
-      <div class="container w-auto mx-lg-auto m-1 my-5 p-3 d-flex align-items-center justify-content-center">
-        <div
-          class="row p-2 pb-0 pe-lg-0 pt-lg-5 align-items-center justify-content-between rounded-4  shadow-lg w-auto">
+      <div  class="container w-auto mx-lg-auto m-1 my-5 p-3 d-flex align-items-center justify-content-center">
+        <div style="background-color:#f5f5f5;" class="row p-2 pb-0 pe-lg-0 pt-lg-5 align-items-center justify-content-between rounded-4  shadow-lg w-auto">
           <div class="col-lg-7 p-lg-5 pt-lg-3 ">
             <div class="lc-block mb-3 w-auto">
               <div editable="rich">
@@ -78,7 +77,7 @@
             </div>
 
 
-            <a class="btn btn-success mb-2" width="%20" href="https://github.com/rawazali999">
+            <a class="btn btn-outline-success mb-2" width="%20" href="https://github.com/rawazali999">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
                 viewBox="0 0 16 16">
                 <path
@@ -102,8 +101,7 @@
 
     <!-- skill section start -->
     <section id="skills">
-      <div class="container w-auto mx-lg-auto m-1 p-3 my-5 mt-lg-1 ">
-
+      <div class="container w-auto mx-lg-auto m-1 p-3 my-5 mt-lg-1" >
         <div class="skill-bars">
           <div class="fw-bold fs-2 darkGreen text-center">
             <i class="bi bi-code"></i> Skills
@@ -191,8 +189,7 @@
     <section id="projects">
       <div class="container w-auto mx-lg-auto  p-3 d-flex align-items-center justify-content-around">
 
-        <div
-          class="row p-2 pt-0 pe-lg-3 pt-lg-3 align-items-center justify-content-between rounded-4  shadow-lg w-auto">
+        <div style="background-color:#f5f5f5;" class="row p-2 pt-0 pe-lg-3 pt-lg-3 align-items-center justify-content-between rounded-4  shadow-lg w-auto">
 
           <div class="fw-bold fs-2 darkGreen text-center mb-2">
             <i class="bi bi-file-earmark-code"></i> Projects
@@ -247,8 +244,7 @@
     <section id="contact">
       <div class="container w-auto mx-lg-auto my-5  p-3 d-flex align-items-center justify-content-around">
 
-        <div
-          class="row p-2 pt-0 pe-lg-3 pt-lg-3  justify-content-center rounded-4  shadow-lg w-auto">
+        <div style="background-color:#f5f5f5;" class="row p-2 pt-0 pe-lg-3 pt-lg-3  justify-content-center rounded-4  shadow-lg w-auto">
 
     
 
@@ -325,7 +321,7 @@
 
               <div class=" text-md-left">
                 
-                <a class="btn btn-dark" onclick="document.getElementById('contact-form').submit();"><i class="bi bi-send-fill"></i> Send</a>
+                <a class="btn btn-outline-success text-center" onclick="document.getElementById('contact-form').submit();"><i class="bi bi-send-fill"></i> Send</a>
               </div>
               <div class="status"></div>
             </div>
